@@ -1,5 +1,6 @@
 29 June 2011: Wouter
 	- nsd-control delzone zone.  Removes zone from zonelist.
+	- stats includes number of zones.
 
 28 June 2011: Wouter
 	- nsd-control addzone zone pattern.  Adds new zone, slave or master.
